# neurocore-skills

./: README.md
neurocore-skill-brave/: README.md  pyproject.toml
neurocore-skill-brave/src/neurocore_skill_brave/: __init__.py  skill.py
neurocore-skill-brave/tests/: test_skill.py
neurocore-skill-math/: README.md  pyproject.toml
neurocore-skill-math/blueprints/: lean-first-math-worker.flow.yaml  math-proof-validation-worker.flow.yaml
neurocore-skill-math/scripts/: install_math_tools.sh
neurocore-skill-math/src/neurocore_skill_math/: __init__.py  _availability.py  _base.py  _formats.py  _llm.py  _run.py  atp.py  cas.py  check.py  formal.py  numeric.py  planning.py  prep.py  report.py  smt.py  symbolic.py
neurocore-skill-math/tests/: test_availability.py  test_blueprints.py  test_external.py  test_llm.py  test_pure.py
neurocore-skill-ollama/: README.md  pyproject.toml
neurocore-skill-ollama/src/neurocore_skill_ollama/: __init__.py  skill.py
neurocore-skill-ollama/tests/: test_skill.py
neurocore-skill-postgres/: README.md  pyproject.toml
neurocore-skill-postgres/src/neurocore_skill_postgres/: __init__.py  skill.py
neurocore-skill-postgres/tests/: test_skill.py
neurocore-skill-qdrant/: README.md  pyproject.toml
neurocore-skill-qdrant/src/neurocore_skill_qdrant/: __init__.py  skill.py
neurocore-skill-qdrant/tests/: test_skill.py
neurocore-skill-tavily/: README.md  pyproject.toml
neurocore-skill-tavily/src/neurocore_skill_tavily/: __init__.py  skill.py
neurocore-skill-tavily/tests/: test_skill.py
neurocore-skill-telegram/: README.md  pyproject.toml
neurocore-skill-telegram/src/neurocore_skill_telegram/: __init__.py  skill.py
neurocore-skill-telegram/tests/: test_skill.py
neurocore-skill-wolfram/: README.md  pyproject.toml
neurocore-skill-wolfram/src/neurocore_skill_wolfram/: __init__.py  skill.py
neurocore-skill-wolfram/tests/: test_skill.py
