[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurocore-skill-wolfram"
version = "0.1.0"
description = "Wolfram|Alpha computational-knowledge skill for NeuroCore"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [{ name = "NeuroCore Contributors" }]
keywords = ["neurocore", "skill", "wolfram", "math", "compute", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "neurocore-ai>=0.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2", "pytest-asyncio>=0.24", "ruff>=0.8", "mypy>=1.8"]

[project.entry-points."neurocore.skills"]
wolfram = "neurocore_skill_wolfram:WolframSkill"

[tool.hatch.build.targets.wheel]
packages = ["src/neurocore_skill_wolfram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
